# src/app/api/models/productos-model.ts
@@ -1,0 +1,9 @@
+export interface Producto {
+    id: number;
+    nombre: string;
+    precio: number;
+    imagen: string;
+    categoria: string;
+    stock: number;
+    descripcion: string;
+}
