# src/app/api/services.ts
@@ -1,3 +1,3 @@
 export { ClientesService } from './services/clientes.service';
 export { LoginService } from './services/login.service';
-export { WeatherForecastService } from './services/weather-forecast.service';
+export { ProductosService } from './services/productos.service';
